{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 83,
  "lineage": "6240d04d-e649-5778-1a6f-e617b5f68a64",
  "resources": [
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "k3s_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:loadbalancer/net/k3s-master-lb/f634149ebe211a04",
            "arn_suffix": "net/k3s-master-lb/f634149ebe211a04",
            "dns_name": "k3s-master-lb-f634149ebe211a04.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:loadbalancer/net/k3s-master-lb/f634149ebe211a04",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k3s-master-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e7f5e2aa33b7316c"
              }
            ],
            "subnets": [
              "subnet-0e7f5e2aa33b7316c"
            ],
            "tags": {
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "ProvisionBy": "Terraform"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k3s_server_lb_listener_kubeapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:listener/net/k3s-master-lb/f634149ebe211a04/19a09a3bca398451",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:listener/net/k3s-master-lb/f634149ebe211a04/19a09a3bca398451",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:loadbalancer/net/k3s-master-lb/f634149ebe211a04",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "ProvisionBy": "Terraform"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_lb_target_group.k3s_server_tg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k3s_server_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "arn_suffix": "targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:879381274960:loadbalancer/net/k3s-master-lb/f634149ebe211a04"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250102073022345400000002",
            "name_prefix": "tf-",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "ProvisionBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "k3s_server_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "primary",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf-20250102080040596600000004",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "target_id": "i-07649f8a8c2601111"
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_lb_target_group.k3s_server_tg",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role_policy_attachment.this",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.ignore_ami",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.this",
            "module.k3s-ha.module.k3s_master_instance.aws_spot_instance_request.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "secondary",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf-20250102080040716600000006",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "target_id": "i-01af60ac32205335a"
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_lb_target_group.k3s_server_tg",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role_policy_attachment.this",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.ignore_ami",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.this",
            "module.k3s-ha.module.k3s_master_instance.aws_spot_instance_request.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "tertiary",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf-20250102080040629900000005",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:879381274960:targetgroup/tf-20250102073022345400000002/4ac72bcdba1e67bf",
            "target_id": "i-0ac56e1b7f14856d6"
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_lb_target_group.k3s_server_tg",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role_policy_attachment.this",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.ignore_ami",
            "module.k3s-ha.module.k3s_master_instance.aws_instance.this",
            "module.k3s-ha.module.k3s_master_instance.aws_spot_instance_request.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_k3s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group/sg-052d38c35c4742452",
            "description": "ingress rules for k3s master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052d38c35c4742452",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 51821,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51821
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "k3s-master",
            "name_prefix": "",
            "owner_id": "879381274960",
            "revoke_rules_on_delete": false,
            "tags": {
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "ProvisionBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-03cd2cd0b99029638",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03cd2cd0b99029638",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-03cd2cd0b99029638",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_flannel_vxlan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-0a4c6bd86bd768127",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-0a4c6bd86bd768127",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-0a4c6bd86bd768127",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_flannel_wireguard_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-06aa9819f72f803ba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 51820,
            "id": "sgr-06aa9819f72f803ba",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-06aa9819f72f803ba",
            "tags": null,
            "tags_all": {},
            "to_port": 51820
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_flannel_wireguard_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-0973414584f999a01",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 51821,
            "id": "sgr-0973414584f999a01",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-0973414584f999a01",
            "tags": null,
            "tags_all": {},
            "to_port": 51821
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_k3s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-07854f640ea473e1f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-07854f640ea473e1f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-07854f640ea473e1f",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_k3s_api_6444",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-09e7018262f81b3f9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6444,
            "id": "sgr-09e7018262f81b3f9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-09e7018262f81b3f9",
            "tags": null,
            "tags_all": {},
            "to_port": 6444
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_kubelet_metrics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-04dafdf1327223993",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-04dafdf1327223993",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-04dafdf1327223993",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group-rule/sgr-0bce5672a0b01b056",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bce5672a0b01b056",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d38c35c4742452",
            "security_group_rule_id": "sgr-0bce5672a0b01b056",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0].module.k3s_master_instance[\"primary\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c8f94c2a2261b",
            "arn": "arn:aws:ec2:us-east-1:879381274960:instance/i-07649f8a8c2601111",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "valuead_instance_profile",
            "id": "i-07649f8a8c2601111",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k3s-master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0118c2d1d8d9e30b9",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 200,
                "volume_id": "vol-05a614c5eecca962e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01772b9abec2a2b7f",
            "tags": {
              "Name": "k3s-master-primary",
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "Name": "k3s-master-primary",
              "ProvisionBy": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "k3s-master-primary"
            },
            "vpc_security_group_ids": [
              "sg-052d38c35c4742452"
            ]
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0].module.k3s_master_instance[\"secondary\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c8f94c2a2261b",
            "arn": "arn:aws:ec2:us-east-1:879381274960:instance/i-01af60ac32205335a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "valuead_instance_profile",
            "id": "i-01af60ac32205335a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k3s-master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a6ccd8b7b76ae8d",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 200,
                "volume_id": "vol-071fb4e1788990ad7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01772b9abec2a2b7f",
            "tags": {
              "Name": "k3s-master-secondary",
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "Name": "k3s-master-secondary",
              "ProvisionBy": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "k3s-master-secondary"
            },
            "vpc_security_group_ids": [
              "sg-052d38c35c4742452"
            ]
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k3s-ha[0].module.k3s_master_instance[\"tertiary\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c8f94c2a2261b",
            "arn": "arn:aws:ec2:us-east-1:879381274960:instance/i-0ac56e1b7f14856d6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "valuead_instance_profile",
            "id": "i-0ac56e1b7f14856d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k3s-master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0acc17f867ab0f64d",
            "private_dns": "ip-10-0-1-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 200,
                "volume_id": "vol-04d0b33250bb58220",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01772b9abec2a2b7f",
            "tags": {
              "Name": "k3s-master-tertiary",
              "ProvisionBy": "Terraform"
            },
            "tags_all": {
              "Name": "k3s-master-tertiary",
              "ProvisionBy": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "k3s-master-tertiary"
            },
            "vpc_security_group_ids": [
              "sg-052d38c35c4742452"
            ]
          },
          "dependencies": [
            "module.k3s-ha.aws_iam_instance_profile.valuead_instance_profile",
            "module.k3s-ha.aws_iam_role.valuead_role",
            "module.k3s-ha.aws_key_pair.k3s_master_instance_key",
            "module.k3s-ha.aws_lb.k3s_server_lb",
            "module.k3s-ha.aws_security_group.allow_k3s_master",
            "module.k3s-ha.data.aws_ami.ubuntu_ami",
            "module.k3s-ha.data.template_file.k3s_master_startup_script",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_instance_profile.this",
            "module.k3s-ha.module.k3s_master_instance.aws_iam_role.this",
            "module.k3s-ha.module.k3s_master_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.k3s-ha.module.k3s_master_instance.data.aws_partition.current",
            "module.k3s-ha.module.k3s_master_instance.data.aws_ssm_parameter.this",
            "module.k3s-ha.random_password.k3s_token",
            "module.k3s-ha.tls_private_key.k3s_master_instance_key",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:network-acl/acl-0e8c975a656d1a1ed",
            "default_network_acl_id": "acl-0e8c975a656d1a1ed",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e8c975a656d1a1ed",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "879381274960",
            "subnet_ids": [
              "subnet-01772b9abec2a2b7f",
              "subnet-018b481da6d7238ab",
              "subnet-03d385b67de86b528",
              "subnet-0d3176739811d3605",
              "subnet-0e7f5e2aa33b7316c",
              "subnet-0e82bd25f1bd1c943"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:route-table/rtb-075484d54af4a628c",
            "default_route_table_id": "rtb-075484d54af4a628c",
            "id": "rtb-075484d54af4a628c",
            "owner_id": "879381274960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:security-group/sg-03447674ddcc8a2fd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03447674ddcc8a2fd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "879381274960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093ea46635be5df9b",
            "arn": "arn:aws:ec2:us-east-1:879381274960:elastic-ip/eipalloc-093ea46635be5df9b",
            "association_id": "eipassoc-0a238672f14e3ffaa",
            "domain": "vpc",
            "id": "eipalloc-093ea46635be5df9b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e7105bfe36d2e8f",
            "private_dns": "ip-10-0-101-200.ec2.internal",
            "private_ip": "10.0.101.200",
            "public_dns": "ec2-34-234-1-86.compute-1.amazonaws.com",
            "public_ip": "34.234.1.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:internet-gateway/igw-0a1a936bc3d2b4910",
            "id": "igw-0a1a936bc3d2b4910",
            "owner_id": "879381274960",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093ea46635be5df9b",
            "association_id": "eipassoc-0a238672f14e3ffaa",
            "connectivity_type": "public",
            "id": "nat-06e841089e4851567",
            "network_interface_id": "eni-04e7105bfe36d2e8f",
            "private_ip": "10.0.101.200",
            "public_ip": "34.234.1.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7f5e2aa33b7316c",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b5f0f5949e14bd0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06e841089e4851567",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b5f0f5949e14bd0e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a1a936bc3d2b4910",
            "id": "r-rtb-0b38aea37898b7c021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b38aea37898b7c02",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:route-table/rtb-0b5f0f5949e14bd0e",
            "id": "rtb-0b5f0f5949e14bd0e",
            "owner_id": "879381274960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e841089e4851567",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:route-table/rtb-0b38aea37898b7c02",
            "id": "rtb-0b38aea37898b7c02",
            "owner_id": "879381274960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1a936bc3d2b4910",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed8063ba7cbd83a7",
            "route_table_id": "rtb-0b5f0f5949e14bd0e",
            "subnet_id": "subnet-01772b9abec2a2b7f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a344a1461ea9979",
            "route_table_id": "rtb-0b5f0f5949e14bd0e",
            "subnet_id": "subnet-018b481da6d7238ab"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd41c020a5bfc24",
            "route_table_id": "rtb-0b5f0f5949e14bd0e",
            "subnet_id": "subnet-0d3176739811d3605"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f88455bb7efd1c7",
            "route_table_id": "rtb-0b38aea37898b7c02",
            "subnet_id": "subnet-0e7f5e2aa33b7316c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e05412e480244c73",
            "route_table_id": "rtb-0b38aea37898b7c02",
            "subnet_id": "subnet-03d385b67de86b528"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f3ffc9e3fd64967",
            "route_table_id": "rtb-0b38aea37898b7c02",
            "subnet_id": "subnet-0e82bd25f1bd1c943"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-01772b9abec2a2b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01772b9abec2a2b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-018b481da6d7238ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018b481da6d7238ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-0d3176739811d3605",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3176739811d3605",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-0e7f5e2aa33b7316c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f5e2aa33b7316c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-03d385b67de86b528",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d385b67de86b528",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:subnet/subnet-0e82bd25f1bd1c943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e82bd25f1bd1c943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381274960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081ec9cb4ce7e804e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381274960:vpc/vpc-081ec9cb4ce7e804e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8c975a656d1a1ed",
            "default_route_table_id": "rtb-075484d54af4a628c",
            "default_security_group_id": "sg-03447674ddcc8a2fd",
            "dhcp_options_id": "dopt-0014be58b806dd9d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081ec9cb4ce7e804e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075484d54af4a628c",
            "owner_id": "879381274960",
            "tags": {
              "Environment": "dev",
              "Name": "k3s-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k3s-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}